--- a/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
+++ b/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
@@ -1,38 +1,73 @@
-
-<div id="disclaimer" fxLayout="column">
-
-  <div id="disclaimer-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
-
-      <div id="disclaimer-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
-
-          <div class="logo">
-              <img src="assets/images/logos/logo_black.svg">
-          </div>
-
-          <div class="title">Disclaimer</div>
-
-          <div class="subtitle">
-            <p>This program is free software: you can redistribute it and/or modify
-              it under the terms of the GNU General Public License as published by
-              the Free Software Foundation, either version 3 of the License, or
-              (at your option) any later version.</p>
-
-              <p>This program is distributed in the hope that it will be useful,
-              but WITHOUT ANY WARRANTY; without even the implied warranty of
-              MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-              GNU General Public License for more details.</p>
-
-              <p>You should have received a copy of the GNU General Public License
-              along with this program.  If not, see <a href="http://www.gnu.org/licenses/" target="_blank">http://www.gnu.org/licenses/</a></p>
-
-          </div>
-
-          <div class="button-row">
-            <button class="mat-primary" mat-button (click)="agree()">I Understand</button>
-          </div>
-
-      </div>
-
+<!--<div class="position-relative-t">-->
+<div class="content-container">
+  <div class="logo">
+    <img src="assets/images/logos/logo_white.svg">
   </div>
+  <h1>Welcome to Signum Phoenix Wallet
+    <small class="version">{{version}}</small>
+  </h1>
+  <div class="content">
 
+    <div class="title">Disclaimer</div>
+
+    <div class="text">
+      <p>This program is free software: you can redistribute it and/or modify
+        it under the terms of the GNU General Public License as published by
+        the Free Software Foundation, either version 3 of the License, or
+        (at your option) any later version.</p>
+
+      <p>This program is distributed in the hope that it will be useful,
+        but WITHOUT ANY WARRANTY; without even the implied warranty of
+        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+        GNU General Public License for more details.</p>
+
+      <p>You should have received a copy of the GNU General Public License
+        along with this program. If not, see <a href="http://www.gnu.org/licenses/" target="_blank">http://www.gnu.org/licenses/</a>
+      </p>
+
+    </div>
+
+    <div class="button-row">
+      <button class="mat-primary" mat-button (click)="agree()">I Understand</button>
+    </div>
+  </div>
+  <app-watermark></app-watermark>
 </div>
+<!--</div>-->
+<!--<div id="disclaimer" fxLayout="column">-->
+
+<!--  <div id="disclaimer-form-wrapper" fxLayout="column" fxLayoutAlign="center center">-->
+
+<!--      <div id="disclaimer-form" [@animate]="{value:'*',params:{duration:'500ms',y:'100px'}}">-->
+
+<!--          <div class="logo">-->
+<!--              <img src="assets/images/logos/logo_black.svg">-->
+<!--          </div>-->
+
+<!--          <div class="title">Disclaimer</div>-->
+
+<!--          <div class="subtitle">-->
+<!--            <p>This program is free software: you can redistribute it and/or modify-->
+<!--              it under the terms of the GNU General Public License as published by-->
+<!--              the Free Software Foundation, either version 3 of the License, or-->
+<!--              (at your option) any later version.</p>-->
+
+<!--              <p>This program is distributed in the hope that it will be useful,-->
+<!--              but WITHOUT ANY WARRANTY; without even the implied warranty of-->
+<!--              MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the-->
+<!--              GNU General Public License for more details.</p>-->
+
+<!--              <p>You should have received a copy of the GNU General Public License-->
+<!--              along with this program.  If not, see <a href="http://www.gnu.org/licenses/" target="_blank">http://www.gnu.org/licenses/</a></p>-->
+
+<!--          </div>-->
+
+<!--          <div class="button-row">-->
+<!--            <button class="mat-primary" mat-button (click)="agree()">I Understand</button>-->
+<!--          </div>-->
+
+<!--      </div>-->
+
+<!--  </div>-->
+
+<!--</div>-->
