--- a/web/angular-wallet/src/app/layout/vertical/layout-1/layout-1.component.html
+++ b/web/angular-wallet/src/app/layout/vertical/layout-1/layout-1.component.html
@@ -102,11 +102,14 @@
 
 <!-- LEFT NAVBAR -->
 <ng-template #leftNavbar>
-    <fuse-sidebar name="navbar" class="navbar-fuse-sidebar"
+    <fuse-sidebar name="navbar"
+                  class="navbar-fuse-sidebar"
                   [folded]="fuseConfig.layout.navbar.folded"
                   lockedOpen="gt-md"
                   *ngIf="!fuseConfig.layout.navbar.hidden">
-        <navbar [variant]="fuseConfig.layout.navbar.variant" class="left-navbar"></navbar>
+        <navbar [variant]="fuseConfig.layout.navbar.variant"
+                class="left-navbar">
+        </navbar>
     </fuse-sidebar>
 </ng-template>
 <!-- / LEFT NAVBAR -->
