--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -83,6 +83,7 @@ fuse-sidebar {
               .alias {
                 display: none;
               }
+
             }
 
             .navbar-content {
@@ -224,7 +225,7 @@ navbar {
         }
       }
 
-      .alias {
+      .clickable {
         cursor: pointer;
 
         &:hover {
