fix: virgin import

--- a/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
+++ b/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
@@ -1,4 +1,4 @@
-<div class="content-container">
+<div class="disclaimer-content-container">
   <app-watermark></app-watermark>
   <div class="logo">
     <img src="assets/images/logos/logo_white.svg" alt="Signum Logo">
