--- a/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
@@ -1,7 +1,7 @@
 <h2>{{ 'your_passphrase' | i18n }}</h2>
 <div class="passphrase-container">
   <mat-form-field class="input">
-     <input matInput type="text" placeholder="{{ 'passphrase' | i18n }}" required [(ngModel)]="passphrase" (ngModelChange)="onChange($event)">
+     <input matInput type="text" autocomplete="off" placeholder="{{ 'passphrase' | i18n }}" required [(ngModel)]="passphrase" (ngModelChange)="onChange($event)">
      <mat-hint>{{ 'error_passphrase_required' | i18n }}</mat-hint>
   </mat-form-field>
   <mat-checkbox [ngModel]="showWhitespaces" (ngModelChange)="onCheckboxChange($event)">{{ "show_whitespaces" | i18n }}</mat-checkbox>
