--- a/web/angular-wallet/src/app/main/transactions/transactions.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transactions.component.html
@@ -4,6 +4,16 @@
       <div class="fullwidth since-text">
         <small
           class="grey-500-fg font-size-10">{{"recent_transactions_since" | i18n}}&nbsp;{{oldestTransactionDate | date:'short':null:language}}</small>
+                <button
+                  class="ml-8"
+                  mat-icon-button
+                  matTooltip="{{'refresh_transactions_hint' | i18n}}"
+                  (click)="refreshTransactions()"
+                  [disabled]="isFetching"
+                ><a>
+                  <mat-icon>refresh</mat-icon>
+                </a>
+                </button>
         <!--        TODO: as long as we use lokijs, we should not allow to load all trasnactions - because it could exceed the storage quota -->
 <!--                <button-->
 <!--                  *ngIf="!isMobile"-->
@@ -82,10 +92,7 @@
     </ng-container>
 
     <div class="transactions-table">
-      <app-transaction-table [dataSource]="dataSource"
-                             [account]="account"
-                             [displayedColumns]="columns"
-      >
+      <app-transaction-table [dataSource]="dataSource" [account]="account">
       </app-transaction-table>
     </div>
   </div>
