feat: desktop notifications activated

--- a/web/angular-wallet/src/app/main/dashboard/widgets/miningpool/miningpool.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/miningpool/miningpool.component.html
@@ -8,7 +8,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="!isLoading && poolAccount">
+  <ng-container *ngIf="!isLoading && poolAccount && this.poolName">
     <div fxFlex
          fxLayout="column"
          fxLayoutAlign="center center"
