--- a/web/angular-wallet/src/app/main/dashboard/widgets/transactions-table/transactions-table.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/transactions-table/transactions-table.component.scss
@@ -12,7 +12,7 @@
   .button-link-container {
     margin-top: 8px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     flex-direction: row;
     align-items: center;
   }
