--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -15,7 +15,7 @@
   mat-header-cell:last-child,
   mat-cell:last-child
   {
-    justify-content: end !important;
+    justify-content: flex-end !important;
   }
 
   .mat-column-transaction_id {
