Fixes while regression test (#1723)
* feat: added 404 page for tx/id and acc/id

* fix: protection status auto updating

* fix: update navbar balance

* wip: wallet reset option

* feat: Reset Wallet, fixed Disclaimer

* fix: virgin wallet behavior and reset

* fix: virgin import

* fix: form reference error on sending messages

* chore: improved transaction table layout

* feat: refactored settings section

* feat: desktop notifications activated

* feat: memo'ed tx details

* chore: paginators to 10,20,50

* chore: start -> flex-start:

* fix: npe in balance chart

* chore: minor css adjustments for desktop version

* chore: review cleanups

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -1,5 +1,16 @@
 @import "src/@fuse/scss/fuse";
 
+.unsafe {
+  color: red;
+}
+.watch {
+  color: lightgrey;
+}
+.new {
+  color: greenyellow;
+}
+
+
 fuse-sidebar {
 
   &.navbar-fuse-sidebar {
@@ -53,12 +64,12 @@ fuse-sidebar {
                 cursor: pointer;
                 filter: drop-shadow(0 0 4px black);
 
-                .unsafe-badge {
+                .badge {
                   position: absolute;
-                  color: red;
-                  top: 0;
-                  right: 0;
+                  top: 8px;
+                  right: -4px;
                 }
+
 
                 img {
                   position: relative;
@@ -72,6 +83,7 @@ fuse-sidebar {
               .alias {
                 display: none;
               }
+
             }
 
             .navbar-content {
@@ -198,12 +210,11 @@ navbar {
           filter: drop-shadow(0 0 4px black);
           margin-top: 1rem;
 
-          .unsafe-badge {
+          .badge {
             position: absolute;
             background-color: transparent;
-            color: red;
-            bottom: 40px;
-            right: 80px;
+            top: -8px;
+            right: -24px;
             filter: drop-shadow(0 0 4px black);
           }
 
@@ -214,7 +225,7 @@ navbar {
         }
       }
 
-      .alias {
+      .clickable {
         cursor: pointer;
 
         &:hover {
