--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<section class="login" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
+<div class="content-container">
   <app-watermark></app-watermark>
-  <div class="login__panel">
-    <div class="login__header">
-      <a [routerLink]="[ '' ]">
-        <img alt="Signum logo" class="login__logo" src="assets/images/logos/logo_black.svg"/>
-      </a>
-      <small class="login__version">Phoenix Wallet Version {{version}}</small>
-    </div>
+  <div class="logo">
+    <img src="assets/images/logos/logo_white.svg" alt="Signum Logo">
+  </div>
+  <h1>{{'welcome_to_wallet' | i18n}}
+    <small class="version">{{version}}</small>
+  </h1>
+  <div class="content">
     <div class="login__body">
       <h1 class="login__title">{{ 'get_burst_account' | i18n }}</h1>
       <p class="login__info">{{ 'new_user_text' | i18n }}</p>
@@ -19,4 +19,4 @@
       </div>
     </div>
   </div>
-</section>
+</div>
