--- a/web/angular-wallet/src/app/components/recipient-input/contact-selector/contact-selector.component.scss
+++ b/web/angular-wallet/src/app/components/recipient-input/contact-selector/contact-selector.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
+  width: max-content;
 
   img {
     width: 32px;
