--- a/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
@@ -12,7 +12,7 @@
                     matTooltip="{{'hint_offline_account' | i18n}}">
             remove_red_eye
           </mat-icon>
-          <mat-icon *ngIf="!account.isWatchOnly() && account.isNew()"
+          <mat-icon *ngIf="account.isNew()"
                     class="s-12"
                     matTooltip="{{'hint_new_account' | i18n}}">
             new_releases
