--- a/web/angular-wallet/src/app/components/address/address.component.html
+++ b/web/angular-wallet/src/app/components/address/address.component.html
@@ -23,13 +23,13 @@
         <span>{{'show_in_explorer' | i18n}}</span>
       </button>
       <button
-        *ngIf="selectedAccount.type !== 'offline' && selectedAccount.confirmed"
+        *ngIf="selectedAccount.type !== 'offline' && selectedAccount.isSafe"
         mat-menu-item (click)="sendSignaToAccount(accountId)">
         <mat-icon>publish</mat-icon>
         <span>{{'send_signa' | i18n}}</span>
       </button>
       <button
-        *ngIf="selectedAccount.type !== 'offline' && selectedAccount.confirmed"
+        *ngIf="selectedAccount.type !== 'offline' && selectedAccount.isSafe"
         mat-menu-item (click)="sendMessageToAccount(accountId)">
         <mat-icon>mail_outline</mat-icon>
         <span>{{'send_single_message' | i18n}}</span>
